Change the ui to use bottom navigation Added new homeView with the fisrt UI for that screen Added name to the recipes Added more suggested recipes

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,11 @@
 {
-  "title": "Hello!",
-  "Message" : "This is English"
+  "lang": "English",
+  "app_bar_title": "Sourdough Calculator",
+
+  "nav_bar_item_home": "Home",
+  "nav_bar_item_settings": "Settings",
+  "nav_bar_item_bread": "Breads",
+  "nav_bar_item_timer": "Timer",
+
+  "home_screen_find_recipe": "Find Your \nRecipe"
 }
