--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,4 +1,12 @@
 {
-  "title": "Hola!",
-  "Message" : "Esto es ingles"
+  "lang": "Español",
+  "app_bar_title": "Calculadora de Pan de Masa Madre",
+
+  "nav_bar_item_home": "Inicio",
+  "nav_bar_item_settings": "Ajustes",
+  "nav_bar_item_bread": "Panes",
+  "nav_bar_item_timer": "Temporizador",
+
+  "home_screen_find_recipe": "Encuentre su \nReceta"
+
 }
