Adding translations for home screen Avoid swipe in home screen internal pages Added search functionality. Needs improvements Added ingredients to the Enum Added functionality to change current recipe Added recipe to suggested list Clean code

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,5 +7,8 @@
   "nav_bar_item_bread": "Breads",
   "nav_bar_item_timer": "Timer",
 
-  "home_screen_find_recipe": "Find Your \nRecipe"
+  "home_screen_find_recipe": "Find Your \nRecipe",
+  "home_screen_my_breads" : "My Breads",
+  "home_screen_featured": "Featured",
+  "home_screen_search": "Search"
 }
